[tool.poetry]
name = "fern_python"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
typer = {extras = ["all"], version = "^0.6.1"}
fern-fern-generator-exec = {version = "0.2.2", source = "fern"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
snapshottest = "^0.6.0"

[[tool.poetry.source]]
name = "fern"
url = "https://pypi-dev.buildwithfern.com/"
secondary = true
default = false

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "--ignore-glob=tests/**/generated --ignore-glob=tests/**/snapshots"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
