[tool.poetry]
name = "fern_python"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.2"
typer = {extras = ["all"], version = "^0.6.1"}
fern-fern-generator-exec-sdk = {version = "0.0.195", source = "fern-prod"}
fern-fern-ir-model = "0.0.1841"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"
snapshottest = "^0.6.0"

[[tool.poetry.source]]
name = "fern-dev"
url = "https://pypi-dev.buildwithfern.com/"
default = false
secondary = true


[[tool.poetry.source]]
name = "fern-prod"
url = "https://pypi.buildwithfern.com/"
default = false
secondary = true


[tool.poetry.group.dev.dependencies]
pytest-only = "^2.0.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "--ignore-glob=tests/**/generated --ignore-glob=tests/**/snapshots"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
