# `name`, `repository`, `homepage`, `authors`, and `keywords` are Fern's —
# they identify the SDK template's source on crates.io. The fern-cli
# generator does NOT rewrite this block when producing your CLI; only the
# [[bin]] entry below is templated. If you want to publish *your* CLI as
# its own crate on crates.io, edit this block to your org's metadata.
# The [lib] name (`fern_cli_sdk`) is the import path every `use
# fern_cli_sdk::...` site in src/ depends on — do NOT rename it.
[package]
name = "fern-cli-sdk"
version = "0.18.1"
edition = "2021"
description = "CLI generator — dynamic command surface from OpenAPI and GraphQL schemas"
license = "Apache-2.0"
repository = "https://github.com/fern-api/cli-sdk"
homepage = "https://github.com/fern-api/cli-sdk"
readme = "README.md"
authors = ["Fern <hey@buildwithfern.com>"]
keywords = ["cli", "openapi", "graphql", "fern", "codegen"]
categories = ["command-line-utilities", "web-programming"]

[lib]
name = "fern_cli_sdk"
path = "src/lib.rs"

# Rewritten by the fern-cli generator's `patchCargoToml` step — both the
# `name` and `path` are replaced with the derived binary name so users
# get `cargo install`-able binaries named after their API rather than
# the template's literal "openapi-fixture".
[[bin]]
name = "openapi-fixture"
path = "cli/openapi-fixture/main.rs"

# Internal tool used by the SDK template itself — not the user's CLI.
[[bin]]
name = "strip-schema"
path = "src/bin/strip_schema.rs"

[features]
# TLS backend selection.
#
#   default = ["native-tls"]
#       Uses the OS's native TLS stack (Secure Transport on macOS, SChannel on
#       Windows, OpenSSL on Linux). Honors the OS keychain / cert store —
#       what users typically expect for an interactive CLI.
#
#   ["rustls"]   (cargo build --no-default-features --features rustls)
#       Uses the pure-Rust rustls crate with Mozilla's bundled webpki roots.
#       Produces self-contained static binaries that don't depend on system
#       OpenSSL — preferred for distribution to varied Linux servers, scratch
#       Docker images, and cross-compiled musl/ARM builds. Does NOT read the
#       OS keychain; users must use `<NAME>_CA_BUNDLE` for custom roots.
default = ["native-tls"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite/native-tls"]
rustls = ["reqwest/rustls-tls-native-roots", "tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
anyhow = "1"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "string", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
hmac = "0.12"
dotenvy = "0.15"
futures-util = "0.3"
httpdate = "1"
libc = "0.2"
num-bigint = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4.5", features = ["serde"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
serde_yaml = "0.9.34"
secrecy = "0.10"
serde_qs = "1.1.1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
unicode-normalization = "0.1.25"
form_urlencoded = "1"

[package.metadata.dist]
dist = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
serde = "1"
serde_yaml = "0.9.34"

[dev-dependencies]
serial_test = "3.4.0"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
