[tool.poetry]
name = "seed"
version = "0.0.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "seed/enum", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">= 1.9.2"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
