[tool.poetry]
name = "fern_imdb"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "seed/api", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">= 1.9.2"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
