[project]
name = "fern_simple-fhir"

[tool.poetry]
name = "fern_simple-fhir"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
keywords = []

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
packages = [
    { include = "seed", from = "src"}
]

[project.urls]
Repository = 'https://github.com/simple-fhir/fern'

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "==1.14.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
ruff = "^0.5.6"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120

select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
# E501 (Line too long) is currently ignored because auto-fixing these errors is unsafe, as auto-fixing these errors
# potentially moves type-ignore comments to incorrectl ines.
ignore = [
    "E402",  # Module level import not at top of file
    "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
    "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
    "E722",  # Do not use bare `except`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "E501",  # Line too long
    "E711",  # Comparison to `None` should be `cond is not None`
    "F841"   # Local variable ... is assigned to but never used
]

[tool.ruff.isort]
section-order = ["future", "standard-library", "third-party", "first-party"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
