[package]
name = "sse-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sse_test_client"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
