[package]
name = "server_url_templating_api_types"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
num-bigint = { version = "0.4", features = ["serde"] }
ordered-float = { version = "4.5", features = ["serde"] }
