[tool.poetry]
name = "seed"
version = "0.0.0"
description = ""
readme = "README.md"
authors = []
packages = [
    { include = "seed", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.28.57"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.2"

[tool.ruff]
line-length = 120
target-version = 'py38'
# Add isort + bugbear
select = ["I", "B"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
