[package]
name = "{{PACKAGE_NAME}}"
version = "{{PACKAGE_VERSION}}"
edition = "2021"
description = "{{PACKAGE_DESCRIPTION}}"
license = "{{PACKAGE_LICENSE}}"
repository = "{{PACKAGE_REPOSITORY}}"
documentation = "{{PACKAGE_DOCUMENTATION}}"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-sse = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bytes = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
percent-encoding = "2.3"
ordered-float = { version = "4.5", features = ["serde"] }
pin-project = "1.1"
{{EXTRA_DEPENDENCIES}}
[dev-dependencies]
tokio-test = "0.4"
{{EXTRA_DEV_DEPENDENCIES}}